// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupsListScreen handleScroll paginates when close to bottom 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -362,11 +362,11 @@
              \\"nodes\\": Array [],
            },
            \\"report\\": Object {
              \\"__typename\\": \\"CommunitiesReport\\",
              \\"contactCount\\": 0,
-             \\"memberCount\\": 41702,
+             \\"memberCount\\": 44991,
              \\"unassignedCount\\": 0,
            },
            \\"unreadCommentsCount\\": 0,
            \\"userCreated\\": true,
          },
@@ -656,12 +656,302 @@
              \\"contactCount\\": 62169,
              \\"memberCount\\": 7379,
              \\"unassignedCount\\": 11474,
            },
            \\"unreadCommentsCount\\": 35653,
+           \\"userCreated\\": true,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"aut eos quis\\",
+           \\"id\\": \\"11\\",
+           \\"name\\": \\"Grass-roots logistical task-force\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"PersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Kali\\",
+                 \\"lastName\\": \\"Fay\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Kattie\\",
+                 \\"lastName\\": \\"Wisoky\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 84203,
+             \\"memberCount\\": 27831,
+             \\"unassignedCount\\": 12417,
+           },
+           \\"unreadCommentsCount\\": 50981,
+           \\"userCreated\\": false,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"sunt qui similique\\",
+           \\"id\\": \\"12\\",
+           \\"name\\": \\"Intuitive exuding core\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"PersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Wade\\",
+                 \\"lastName\\": \\"Johnson\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Kelley\\",
+                 \\"lastName\\": \\"Hilll\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 1864,
+             \\"memberCount\\": 81299,
+             \\"unassignedCount\\": 80063,
+           },
+           \\"unreadCommentsCount\\": 23362,
+           \\"userCreated\\": false,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"porro aut laborum\\",
+           \\"id\\": \\"13\\",
+           \\"name\\": \\"Right-sized transitional product\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"PersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Gideon\\",
+                 \\"lastName\\": \\"Kautzer\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Salma\\",
+                 \\"lastName\\": \\"Rolfson\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 74712,
+             \\"memberCount\\": 42781,
+             \\"unassignedCount\\": 55624,
+           },
+           \\"unreadCommentsCount\\": 28976,
+           \\"userCreated\\": false,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"commodi inventore sequi\\",
+           \\"id\\": \\"14\\",
+           \\"name\\": \\"Organized disintermediate ability\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"PersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Bobbie\\",
+                 \\"lastName\\": \\"Wehner\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Alvah\\",
+                 \\"lastName\\": \\"Von\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 10749,
+             \\"memberCount\\": 78195,
+             \\"unassignedCount\\": 22570,
+           },
+           \\"unreadCommentsCount\\": 42838,
+           \\"userCreated\\": false,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"aperiam natus et\\",
+           \\"id\\": \\"15\\",
+           \\"name\\": \\"Robust mobile capability\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"PersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Adolph\\",
+                 \\"lastName\\": \\"Christiansen\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Antonietta\\",
+                 \\"lastName\\": \\"Greenholt\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 96727,
+             \\"memberCount\\": 36081,
+             \\"unassignedCount\\": 56810,
+           },
+           \\"unreadCommentsCount\\": 61632,
+           \\"userCreated\\": true,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"architecto magnam voluptatem\\",
+           \\"id\\": \\"16\\",
+           \\"name\\": \\"Function-based logistical interface\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"PersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Natalia\\",
+                 \\"lastName\\": \\"Crooks\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Cleta\\",
+                 \\"lastName\\": \\"Wehner\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 58135,
+             \\"memberCount\\": 37113,
+             \\"unassignedCount\\": 97001,
+           },
+           \\"unreadCommentsCount\\": 27464,
+           \\"userCreated\\": false,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"quod labore ullam\\",
+           \\"id\\": \\"17\\",
+           \\"name\\": \\"Adaptive tangible orchestration\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"PersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Jeremie\\",
+                 \\"lastName\\": \\"Doyle\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Liliana\\",
+                 \\"lastName\\": \\"Wunsch\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 82898,
+             \\"memberCount\\": 89302,
+             \\"unassignedCount\\": 15679,
+           },
+           \\"unreadCommentsCount\\": 5001,
            \\"userCreated\\": true,
          },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"et quasi eaque\\",
+           \\"id\\": \\"18\\",
+           \\"name\\": \\"Grass-roots holistic support\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"PersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Jeanie\\",
+                 \\"lastName\\": \\"Schulist\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Lemuel\\",
+                 \\"lastName\\": \\"Ruecker\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 56885,
+             \\"memberCount\\": 45528,
+             \\"unassignedCount\\": 31736,
+           },
+           \\"unreadCommentsCount\\": 75934,
+           \\"userCreated\\": false,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"aut culpa ratione\\",
+           \\"id\\": \\"19\\",
+           \\"name\\": \\"Right-sized mobile implementation\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"PersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Genoveva\\",
+                 \\"lastName\\": \\"Lang\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Kathryn\\",
+                 \\"lastName\\": \\"Emard\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 74533,
+             \\"memberCount\\": 91644,
+             \\"unassignedCount\\": 66923,
+           },
+           \\"unreadCommentsCount\\": 53182,
+           \\"userCreated\\": true,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"magni et voluptas\\",
+           \\"id\\": \\"20\\",
+           \\"name\\": \\"Advanced didactic system engine\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"PersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Fritz\\",
+                 \\"lastName\\": \\"Effertz\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Lola\\",
+                 \\"lastName\\": \\"Blanda\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 21017,
+             \\"memberCount\\": 9541,
+             \\"unassignedCount\\": 75275,
+           },
+           \\"unreadCommentsCount\\": 46215,
+           \\"userCreated\\": false,
+         },
        ]
      }
      disableVirtualization={false}
      getItem={[Function anonymous]}
      getItemCount={[Function anonymous]}
@@ -719,11 +1009,11 @@
                  \\"nodes\\": Array [],
                },
                \\"report\\": Object {
                  \\"__typename\\": \\"CommunitiesReport\\",
                  \\"contactCount\\": 0,
-                 \\"memberCount\\": 41702,
+                 \\"memberCount\\": 44991,
                  \\"unassignedCount\\": 0,
                },
                \\"unreadCommentsCount\\": 0,
                \\"userCreated\\": true,
              }
@@ -1084,11 +1374,11 @@
          />
        </View>
        <View
          style={
            Object {
-             \\"height\\": 4198.75,
+             \\"height\\": 8397.5,
            }
          }
        />
      </View>
    </RCTScrollView>"
`;

exports[`GroupsListScreen handleScroll should not load more when no next page 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`GroupsListScreen handleScroll should not load more when not scrolling close to bottom 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`GroupsListScreen renders with communities 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {},
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                  "fontWeight": "500",
                },
                undefined,
              ],
            ]
          }
        >
          COMMUNITIES
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="joinCommunity"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#005A7F",
                  "flexBasis": 40,
                  "justifyContent": "center",
                  "paddingVertical": 13,
                },
                Object {
                  "borderRightColor": "#007398",
                  "borderRightWidth": 1,
                },
              ],
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 12,
                    "fontWeight": "bold",
                  },
                ],
              ]
            }
          >
            JOIN A COMMUNITY
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="createCommunity"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#005A7F",
                "flexBasis": 40,
                "justifyContent": "center",
                "paddingVertical": 13,
              },
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 12,
                    "fontWeight": "bold",
                  },
                ],
              ]
            }
          >
            CREATE A COMMUNITY
          </Text>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "__typename": "Community",
          "communityPhotoUrl": null,
          "id": "_global_community_id",
          "name": "MissionHub Community",
          "owner": Object {
            "__typename": "PersonConnection",
            "nodes": Array [],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 0,
            "memberCount": 41702,
            "unassignedCount": 0,
          },
          "unreadCommentsCount": 0,
          "userCreated": true,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "blanditiis natus et",
          "id": "1",
          "name": "Vision-oriented non-volatile system engine",
          "owner": Object {
            "__typename": "PersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Brooklyn",
                "lastName": "Weimann",
              },
              Object {
                "__typename": "Person",
                "firstName": "Clotilde",
                "lastName": "Sanford",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 80074,
            "memberCount": 71597,
            "unassignedCount": 96826,
          },
          "unreadCommentsCount": 91396,
          "userCreated": false,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "explicabo eligendi occaecati",
          "id": "2",
          "name": "Adaptive bandwidth-monitored encryption",
          "owner": Object {
            "__typename": "PersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Selina",
                "lastName": "Streich",
              },
              Object {
                "__typename": "Person",
                "firstName": "Soledad",
                "lastName": "Simonis",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 8504,
            "memberCount": 82960,
            "unassignedCount": 3905,
          },
          "unreadCommentsCount": 80275,
          "userCreated": false,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "inventore debitis libero",
          "id": "3",
          "name": "Vision-oriented bifurcated core",
          "owner": Object {
            "__typename": "PersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Ayden",
                "lastName": "Medhurst",
              },
              Object {
                "__typename": "Person",
                "firstName": "Helena",
                "lastName": "Osinski",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 95788,
            "memberCount": 41178,
            "unassignedCount": 53316,
          },
          "unreadCommentsCount": 27304,
          "userCreated": false,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "nostrum ipsam qui",
          "id": "4",
          "name": "Compatible foreground collaboration",
          "owner": Object {
            "__typename": "PersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Marques",
                "lastName": "Sawayn",
              },
              Object {
                "__typename": "Person",
                "firstName": "Roberta",
                "lastName": "Jenkins",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 1828,
            "memberCount": 3417,
            "unassignedCount": 75014,
          },
          "unreadCommentsCount": 19755,
          "userCreated": true,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "distinctio placeat ullam",
          "id": "5",
          "name": "Innovative encompassing moratorium",
          "owner": Object {
            "__typename": "PersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Dylan",
                "lastName": "Kilback",
              },
              Object {
                "__typename": "Person",
                "firstName": "Patience",
                "lastName": "Ernser",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 10322,
            "memberCount": 7336,
            "unassignedCount": 44789,
          },
          "unreadCommentsCount": 62402,
          "userCreated": true,
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
    testID="flatList"
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": null,
              "id": "_global_community_id",
              "name": "MissionHub Community",
              "owner": Object {
                "__typename": "PersonConnection",
                "nodes": Array [],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 0,
                "memberCount": 41702,
                "unassignedCount": 0,
              },
              "unreadCommentsCount": 0,
              "userCreated": true,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "blanditiis natus et",
              "id": "1",
              "name": "Vision-oriented non-volatile system engine",
              "owner": Object {
                "__typename": "PersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Brooklyn",
                    "lastName": "Weimann",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Clotilde",
                    "lastName": "Sanford",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 80074,
                "memberCount": 71597,
                "unassignedCount": 96826,
              },
              "unreadCommentsCount": 91396,
              "userCreated": false,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "explicabo eligendi occaecati",
              "id": "2",
              "name": "Adaptive bandwidth-monitored encryption",
              "owner": Object {
                "__typename": "PersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Selina",
                    "lastName": "Streich",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Soledad",
                    "lastName": "Simonis",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 8504,
                "memberCount": 82960,
                "unassignedCount": 3905,
              },
              "unreadCommentsCount": 80275,
              "userCreated": false,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "inventore debitis libero",
              "id": "3",
              "name": "Vision-oriented bifurcated core",
              "owner": Object {
                "__typename": "PersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Ayden",
                    "lastName": "Medhurst",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Helena",
                    "lastName": "Osinski",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 95788,
                "memberCount": 41178,
                "unassignedCount": 53316,
              },
              "unreadCommentsCount": 27304,
              "userCreated": false,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "nostrum ipsam qui",
              "id": "4",
              "name": "Compatible foreground collaboration",
              "owner": Object {
                "__typename": "PersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Marques",
                    "lastName": "Sawayn",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Roberta",
                    "lastName": "Jenkins",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 1828,
                "memberCount": 3417,
                "unassignedCount": 75014,
              },
              "unreadCommentsCount": 19755,
              "userCreated": true,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "distinctio placeat ullam",
              "id": "5",
              "name": "Innovative encompassing moratorium",
              "owner": Object {
                "__typename": "PersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Dylan",
                    "lastName": "Kilback",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Patience",
                    "lastName": "Ernser",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 10322,
                "memberCount": 7336,
                "unassignedCount": 44789,
              },
              "unreadCommentsCount": 62402,
              "userCreated": true,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={
          Object {
            "height": 2099.375,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`GroupsListScreen renders with only global community 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {},
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                  "fontWeight": "500",
                },
                undefined,
              ],
            ]
          }
        >
          COMMUNITIES
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="joinCommunity"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#005A7F",
                  "flexBasis": 40,
                  "justifyContent": "center",
                  "paddingVertical": 13,
                },
                Object {
                  "borderRightColor": "#007398",
                  "borderRightWidth": 1,
                },
              ],
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 12,
                    "fontWeight": "bold",
                  },
                ],
              ]
            }
          >
            JOIN A COMMUNITY
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="createCommunity"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#005A7F",
                "flexBasis": 40,
                "justifyContent": "center",
                "paddingVertical": 13,
              },
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 12,
                    "fontWeight": "bold",
                  },
                ],
              ]
            }
          >
            CREATE A COMMUNITY
          </Text>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "__typename": "Community",
          "communityPhotoUrl": null,
          "id": "_global_community_id",
          "name": "MissionHub Community",
          "owner": Object {
            "__typename": "PersonConnection",
            "nodes": Array [],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 0,
            "memberCount": 0,
            "unassignedCount": 0,
          },
          "unreadCommentsCount": 0,
          "userCreated": true,
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
    testID="flatList"
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": null,
              "id": "_global_community_id",
              "name": "MissionHub Community",
              "owner": Object {
                "__typename": "PersonConnection",
                "nodes": Array [],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 0,
                "memberCount": 0,
                "unassignedCount": 0,
              },
              "unreadCommentsCount": 0,
              "userCreated": true,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;
